--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-image-slider": "^1.0.2",
     "vue-router": "^4.0.0-0",
+    "vueperslides": "^2.12.1",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
